--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,6 +45,6 @@ layout: compress
             </div>
         </div>
     </header>
-    {% include scripts.html %}
+    <!-- {% include scripts.html %} -->
 </body>
 </html>
