--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,10 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
-		<button class="dl-trigger">Open Menu</button>
+		<!-- <button class="dl-trigger">Open Menu</button> -->
 		<ul class="dl-menu">
-			<li><a href="{{ site.url }}/">Home</a></li>
-			<!-- <li>
+			<li>
+                <a href="{{ site.url }}/">About</a>
+            </li>
+			<li>
 				<a href="#">About</a>
 				<ul class="dl-submenu">
 					<li>
@@ -80,15 +82,15 @@
                     {% if site.hackernews %}<li>
                         <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
                     </li>{% endif %}
-				</ul> --><!-- /.dl-submenu -->
-			<!-- </li> -->
-			<!-- <li>
+				</ul> -->/.dl-submenu
+			</li>
+			<li>
 				<a href="#">Posts</a>
 				<ul class="dl-submenu">
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
-			</li> -->
+			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
 		        {% assign domain = '' %}
@@ -97,5 +99,5 @@
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
 		  {% endfor %}
-		</ul><!-- /.dl-menu -->
+		</ul><!-- /.dl-menu
 	</nav><!-- /.dl-menuwrapper -->
