--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 	<nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 		<!-- <button class="dl-trigger">Open Menu</button> -->
-		<ul class="dl-menu">
+		<!-- <ul class="dl-menu"> -->
 			<li>
                 <a href="{{ site.url }}/">About</a>
             </li>
@@ -99,5 +99,5 @@
 		    {% endif %}
 		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
 		  {% endfor %}
-		</ul><!-- /.dl-menu
+		<!-- </ul> --><!-- /.dl-menu
 	</nav><!-- /.dl-menuwrapper -->
