--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,10 +7,10 @@ layout: compress
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
 <head>
-    <!-- {% include head.html %} -->
+    {% include head.html %}
 </head>
 <body>
-    <!-- {% include nav.html %} -->
+    {% include nav.html %}
     <!-- Header -->
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
