--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -80,7 +80,7 @@
                     {% if site.hackernews %}<li>
                         <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
                     </li>{% endif %}
-				</ul> --><!-- /.dl-submenu -->
+				</ul><!-- /.dl-submenu -->
 			</li>
 			<li>
 				<a href="#">Posts</a>
