--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,17 +1,18 @@
-	<!-- <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
-		<button class="dl-trigger">Open Menu</button>
-		<ul class="dl-menu">
-			<li><a href="{{ site.url }}/">Home</a></li>
-			<li>
-				<a href="#">About</a>
-				<ul class="dl-submenu">
-					<li>
-						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
-						<h4>{{ site.title }}</h4>
-						<p>{{ site.description }}</p>
-					</li>
-					<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">Learn More</span></a></li>
-					{% if site.email %}<li>
+
+    <!-- <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
+        <button class="dl-trigger">Open Menu</button>
+        <ul class="dl-menu">
+            <li><a href="{{ site.url }}/">Home</a></li>
+            <li>
+                <a href="#">About</a>
+                <ul class="dl-submenu">
+                    <li>
+                        <img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
+                        <h4>{{ site.title }}</h4>
+                        <p>{{ site.description }}</p>
+                    </li>
+                    <li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">Learn More</span></a></li>
+                    {% if site.email %}<li>
                         <a href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i> Email</a>
                     </li>{% endif %}
                     {% if site.twitter %}<li>
@@ -79,23 +80,23 @@
                     </li>{% endif %}
                     {% if site.hackernews %}<li>
                         <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
-                    </li>{% endif %} -->
-				<!-- </ul>  --><!-- /.dl-submenu-->
-			<!-- </li>
-			<li>
-				<a href="#">Posts</a>
-				<ul class="dl-submenu">
-					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
-					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
-				</ul>
-			</li>
-			{% for link in site.data.navigation %}
-		    {% if link.url contains 'http' %}
-		        {% assign domain = '' %}
-		        {% else %}
-		        {% assign domain = site.url %}
-		    {% endif %}
-		    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
-		  {% endfor %} -->
-		<!-- </ul> --><!-- /.dl-menu -->
-	<!-- </nav> --><!-- /.dl-menuwrapper -->
+                    </li>{% endif %}
+                </ul> 
+            </li>
+            <li>
+                <a href="#">Posts</a>
+                <ul class="dl-submenu">
+                    <li><a href="{{ site.url }}/posts/">All Posts</a></li>
+                    <li><a href="{{ site.url }}/tags/">All Tags</a></li>
+                </ul>
+            </li>
+            {% for link in site.data.navigation %}
+            {% if link.url contains 'http' %}
+                {% assign domain = '' %}
+                {% else %}
+                {% assign domain = site.url %}
+            {% endif %}
+            <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" rel="noopener noreferrer"{% endif %}>{{ link.title }}</a></li>
+          {% endfor %}
+        </ul>
+    </nav> -->
