--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,7 @@ layout: compress
 </head>
 <body>
     <!-- {% include nav.html %} -->
+    <!-- Header -->
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
             <div class="row">
