--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,8 +42,9 @@
     <link rel="apple-touch-icon" sizes="72x72" href="{{ site.url }}/assets/img/favicons/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="{{ site.url }}/assets/img/favicons/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="{{ site.url }}/assets/img/favicons/apple-icon-144x144.png">
-    <link rel="shortcut icon" type="image/png" href="{{ site.url }}/favicon.png" />
-    <link rel="shortcut icon" href="{{ site.url }}/favicon.ico" />
+    <!-- title icon url -->
+    <link rel="shortcut icon" type="image/png" href="{{ site.url }}/assets/img/雷锋馆长.jpg" />
+    <link rel="shortcut icon" href="{{ site.url }}/assets/img/雷锋馆长.jpg" />
     <!-- Background Image -->
     {% if site.background %}
     {% capture background %}{{ site.background }}{% endcapture %}
