--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,11 @@ layout: compress
 <!--[if gt IE 8]><!--> <html class="no-js"><!--<![endif]-->
 <head>
     {% include head.html %}
+    <<style type="text/css" media="screen">
+        body{
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <!-- {% include nav.html %} -->
@@ -25,7 +30,6 @@ layout: compress
             pre {
               background: none;
               border: none;
-              background-color: black;
             }
             </style>
             <pre>
