--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,15 +32,15 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
+                         <!-- <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
-                         </a>
+                         </a> -->
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <!-- <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a>
+                         </a> -->
                  </h3>
             </div>
         </div>
